FEATURE: Support adding new book with ISBN
